# float-dock

./: .gitignore  README.md
PRD/: PRD_v0.1.md
float_launcher/: Cargo.toml  README.md  build.rs
float_launcher/src/: app.rs  branding.rs  config.rs  events.rs  icons.rs  main.rs  system.rs
float_launcher/src/app/: runtime.rs  state.rs  style.rs  ui.rs
