[package]
name = "float_launcher"
version = "0.1.0"
edition = "2021"
default-run = "float_dock"

[[bin]]
name = "float_dock"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.19.0"
directories = "5.0"
log = "0.4"
crossbeam-channel = "0.5"

[build-dependencies]
winres = "0.1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Com",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
